--- a/results/Analyze dtrajs.ipynb
+++ b/results/Analyze dtrajs.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -902,16 +902,16 @@
     "# create a length-2000 array and save it, mapping each cluster_id to \n",
     "# its metastable state\n",
     "\n",
-    "macrostate_ids = np.zeros(2000)-1\n",
+    "macrostate_ids_abl = np.zeros(2000)-1\n",
     "\n",
     "for i in range(len(macrostate_ids)):\n",
     "    cluster_id = i\n",
     "    if cluster_id in mb_msm_abl.mapping_:\n",
     "        microstate_id = mb_msm_abl.mapping_[cluster_id]\n",
     "        macrostate_id = pcca_abl.microstate_mapping_[microstate_id]\n",
-    "        macrostate_ids[cluster_id] = macrostate_id\n",
+    "        macrostate_ids_abl[cluster_id] = macrostate_id\n",
     "        \n",
-    "np.save('macrostate_ids_abl.npy',macrostate_ids)"
+    "np.save('macrostate_ids_abl.npy',macrostate_ids_abl)"
    ]
   },
   {
@@ -925,32 +925,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "macrostate_ids = np.zeros(2000)-1\n",
+    "macrostate_ids_src = np.zeros(2000)-1\n",
     "\n",
     "for i in range(len(macrostate_ids)):\n",
     "    cluster_id = i\n",
     "    if cluster_id in mb_msm_src.mapping_:\n",
     "        microstate_id = mb_msm_src.mapping_[cluster_id]\n",
     "        macrostate_id = pcca_src.microstate_mapping_[microstate_id]\n",
-    "        macrostate_ids[cluster_id] = macrostate_id\n",
+    "        macrostate_ids_src[cluster_id] = macrostate_id\n",
     "        \n",
-    "np.save('macrostate_ids_src.npy',macrostate_ids)"
+    "np.save('macrostate_ids_src.npy',macrostate_ids_src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(338,)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pcca_abl.populations_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,\n",
+       "       30, 30, 30, 16, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,\n",
+       "       30,  4, 30, 30, 16, 23, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 20,\n",
+       "       30, 30, 30, 23, 30, 30, 30, 30, 24, 30, 30, 30, 30, 30, 30, 30, 11,\n",
+       "       30, 30, 18, 29, 30, 30, 30, 30, 30, 25, 30, 30, 30, 30, 30, 30, 30,\n",
+       "       30, 30, 30, 24, 30, 30, 30, 30, 30, 30, 23, 30, 30, 30, 26, 17, 30,\n",
+       "       13, 30, 10, 29, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,  6, 30, 30,\n",
+       "       30, 30, 17, 28, 30, 30, 30, 30, 30, 30, 30, 11, 30, 30, 30, 30, 30,\n",
+       "       30, 30, 30, 30, 17, 30, 17, 30, 30, 30, 30, 30, 30, 14, 30, 30, 30,\n",
+       "       30, 30, 30, 14, 30, 30, 13,  1, 10, 30, 30, 30, 30, 30, 30, 30,  2,\n",
+       "        8, 30, 16, 30, 30, 30, 30, 30, 30, 29, 30, 30, 30,  9, 30, 30, 16,\n",
+       "       30, 30, 16, 30, 30, 17, 16, 30, 30, 30, 20, 30, 15, 30, 30, 30, 29,\n",
+       "       30, 30, 30, 30,  1, 30, 30, 30, 30, 30, 30, 18, 30, 19, 30, 30, 30,\n",
+       "       30, 22, 30, 30, 27, 16, 30, 30,  6, 30, 30, 29, 12,  0, 30, 30, 30,\n",
+       "       30, 30, 30, 30, 23, 30, 30, 21, 14, 30, 30, 21, 26, 30, 30, 30, 29,\n",
+       "       30, 30, 30, 30, 24, 30, 30, 30, 30, 30,  5, 30, 18,  6, 30, 30,  0,\n",
+       "       30, 30, 30,  5, 30, 30,  1, 30, 30, 27,  2, 30, 23, 30, 26, 30, 30,\n",
+       "       30, 10, 11, 30, 22, 29, 23, 30, 30, 28, 30,  3, 30, 30, 30, 30, 30,\n",
+       "       23, 30, 30, 30, 30, 30, 18, 30, 30, 30, 16, 30,  2, 30, 30, 30, 30,\n",
+       "       30, 30, 30, 30, 30, 30,  7, 30, 30, 18, 30, 30, 30,  8, 30])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pcca_abl.microstate_mapping_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "for macrostate in range(pcca_abl.n_macrostates):\n",
+    "    pcca_abl.populations_"
+   ]
   },
   {
    "cell_type": "code",
@@ -999,12 +1066,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# get microstate populations\n",
+    "\n",
+    "populations_abl = np.zeros(2000)\n",
+    "for i in mb_msm_abl.mapping_:\n",
+    "    populations_abl[i] = mb_msm_abl.populations_[mb_msm_abl.mapping_[i]]\n",
+    "\n",
+    "# select most populous microstate within each macrostate\n",
+    "n_macro = pcca_abl.n_macrostates\n",
+    "exemplar_inds_abl = np.zeros(n_macro,dtype=int)\n",
+    "for i in range(n_macro):\n",
+    "    exemplar_inds_abl[i] = np.argmax(populations_abl*(macrostate_ids_abl==i))\n",
+    "    \n",
+    "    \n",
+    "populations_src = np.zeros(2000)\n",
+    "for i in mb_msm_src.mapping_:\n",
+    "    populations_src[i] = mb_msm_src.populations_[mb_msm_src.mapping_[i]]\n",
+    "\n",
+    "# select most populous microstate within each macrostate\n",
+    "n_macro = pcca_src.n_macrostates\n",
+    "exemplar_inds_src = np.zeros(n_macro,dtype=int)\n",
+    "for i in range(n_macro):\n",
+    "    exemplar_inds_src[i] = np.argmax(populations_src*(macrostate_ids_src==i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 283, 1644,  961, 1034,  711,  659, 1503,  418,  952,    0])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemplar_inds_src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.save('exemplar_inds_abl.npy',exemplar_inds_abl)\n",
+    "np.save('exemplar_inds_src.npy',exemplar_inds_src)"
+   ]
   },
   {
    "cell_type": "code",
