add kmeans clustering results + readme

--- a/results/T4 MSM-building.ipynb
+++ b/results/T4 MSM-building.ipynb
@@ -2331,6 +2331,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//lab.jakiestfu.com/contextjs/context.standalone.css\"\n",
+       "}));\n",
+       "\n",
+       "require.config({\n",
+       "    paths: {\n",
+       "        'three': '//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min',\n",
+       "        'iview' : '/nbextensions/mdtraj/iview',\n",
+       "        'surface' : '/nbextensions/mdtraj/surface.min',\n",
+       "        'objexporter' : '/nbextensions/mdtraj/objexporter',\n",
+       "        'filesaver' : '/nbextensions/mdtraj/filesaver',\n",
+       "        'jqueryui': '//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min',\n",
+       "        'contextmenu': '/nbextensions/mdtraj/context',\n",
+       "    },\n",
+       "    shim: {\n",
+       "        three: {\n",
+       "            exports: 'THREE'\n",
+       "        },\n",
+       "        iview: {\n",
+       "            deps: ['three', 'surface'],\n",
+       "            exports: 'iview'\n",
+       "        },\n",
+       "        surface: {\n",
+       "            exports: 'ProteinSurface'\n",
+       "        },\n",
+       "        objexporter: {\n",
+       "            deps: ['three'],\n",
+       "            exports: 'THREE.OBJExporter'\n",
+       "        },\n",
+       "        jqueryui: {\n",
+       "            exports: \"$\"\n",
+       "        },\n",
+       "        contextmenu: {\n",
+       "            deps: ['jquery'],\n",
+       "            exports: \"context\"\n",
+       "        },\n",
+       "    },\n",
+       "});\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from mdtraj.html import TrajectoryView, enable_notebook\n",
+    "enable_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "TrajectoryView(traj[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 393,
    "metadata": {
     "collapsed": true
