add notebooks on discriminating runs

--- a/results/Overlap plot.ipynb
+++ b/results/Overlap plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -37,6 +37,29 @@
     "\n",
     "overlap_matrix_abl = create_overlap_matrix(dtrajs_abl)\n",
     "overlap_matrix_src = create_overlap_matrix(dtrajs_src)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.20393925000000002"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import simtk.unit as u\n",
+    "(sum([len(t) for t in raw_dtrajs_abl])*250*u.picosecond).value_in_unit(u.millisecond)"
    ]
   },
   {
@@ -135,6 +158,178 @@
    "source": [
     "Image('overlap_matrix_src.jpg',retina=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading trajectory_1.xtc...\n",
+      "loading trajectory_10.xtc...\n",
+      "loading trajectory_11.xtc...\n",
+      "loading trajectory_12.xtc...\n",
+      "loading trajectory_13.xtc...\n",
+      "loading trajectory_14.xtc...\n",
+      "loading trajectory_15.xtc...\n",
+      "loading trajectory_16.xtc...\n",
+      "loading trajectory_17.xtc...\n",
+      "loading trajectory_18.xtc...\n",
+      "loading trajectory_19.xtc...\n",
+      "loading trajectory_2.xtc...\n",
+      "loading trajectory_20.xtc...\n",
+      "loading trajectory_21.xtc...\n",
+      "loading trajectory_22.xtc...\n",
+      "loading trajectory_23.xtc...\n",
+      "loading trajectory_24.xtc...\n",
+      "loading trajectory_25.xtc...\n",
+      "loading trajectory_26.xtc...\n",
+      "loading trajectory_27.xtc...\n",
+      "loading trajectory_28.xtc...\n",
+      "loading trajectory_3.xtc...\n",
+      "loading trajectory_4.xtc...\n",
+      "loading trajectory_5.xtc...\n",
+      "loading trajectory_6.xtc...\n",
+      "loading trajectory_7.xtc...\n",
+      "loading trajectory_8.xtc...\n",
+      "loading trajectory_9.xtc...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# discriminating runs\n",
+    "\n",
+    "# idea: use decision tree classification to decide predict run label\n",
+    "\n",
+    "# use fs peptide first, since I got rid of the src / abl data\n",
+    "\n",
+    "from msmbuilder.example_datasets import FsPeptide\n",
+    "trajs = FsPeptide().get().trajectories\n",
+    "\n",
+    "from msmbuilder.featurizer import DihedralFeaturizer\n",
+    "dih_model = DihedralFeaturizer()\n",
+    "featurized = dih_model.fit_transform(trajs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def featurized_to_XY(featurized):\n",
+    "    X = np.vstack(featurized)\n",
+    "    y = np.hstack(i*np.ones(len(x)) for i,x in enumerate(featurized))\n",
+    "    return X,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((280000, 84), (280000,))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X,y = featurized_to_XY(featurized)\n",
+    "X.shape,y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dt = DecisionTreeClassifier(criterion='entropy',max_depth=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=5,\n",
+       "            max_features=None, max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.44834642857142859"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.score(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
